--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-dev": "webpack --config webpack/webpack.common.config.js",
     "start": "webpack-dev-server --hot --config webpack/webpack.common.config.js",
-    "start-dev": "webpack-dev-server --config webpack.dev.config.js"
+    "start-dev": "webpack-dev-server --config webpack.dev.config.js",
+    "build-dev2": "webpack --config webpack.dev.config.js"
   },
   "repository": {
     "type": "git",
@@ -32,7 +33,7 @@
     "html-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.1.1",
     "typescript": "^4.2.4",
-    "webpack": "^5.36.1",
+    "webpack": "^5.36.2",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
