--- a/package.json
+++ b/package.json
@@ -22,31 +22,15 @@
   "homepage": "https://github.com/xuxiaoping2016/reactProject#readme",
   "devDependencies": {
     "@babel/core": "^7.14.0",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-proposal-decorators": "^7.13.15",
     "@babel/preset-env": "^7.14.0",
-    "@babel/preset-react": "^7.13.13",
-    "@babel/preset-typescript": "^7.13.0",
-    "@types/react-router-dom": "^5.1.7",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "html-webpack-plugin": "^5.3.1",
-    "ts-loader": "^9.1.1",
-    "typescript": "^4.2.4",
     "webpack": "^5.36.2",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2"
   },
-  "dependencies": {
-    "@types/node": "^15.0.1",
-    "@types/react-dom": "^17.0.3",
-    "mobx": "^6.3.0",
-    "mobx-react": "^7.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.1.0",
-    "webpack-cli": "^3.3.12"
-  },
+  "dependencies": {},
   "browserslist": [
     "> 1%",
     "last 2 versions",
