--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-dev": "webpack --config webpack/webpack.common.config.js",
-    "start": "webpack-dev-server --hot --config webpack/webpack.common.config.js",
+    "start": "webpack-dev-server --config webpack/webpack.common.config.js",
     "start-dev": "webpack-dev-server --config webpack.dev.config.js",
     "build-dev2": "webpack --config webpack.dev.config.js"
   },
@@ -46,10 +46,5 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
     "webpack-cli": "^3.3.12"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 10"
-  ]
+  }
 }
