--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-dev": "webpack --config webpack/webpack.common.config.js",
-    "start": "webpack-dev-server --config webpack/webpack.common.config.js",
+    "build-dev": "webpack --env  NODE_ENV=development --env stop --config webpack/webpack.common.config.js",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack/webpack.common.config.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.production.config.js",
     "start-dev": "webpack-dev-server --config webpack.dev.config.js",
     "build-dev2": "webpack --config webpack.dev.config.js"
   },
@@ -28,19 +29,35 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
     "@types/react-router-dom": "^5.1.7",
+    "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
+    "bundle-loader": "^0.5.6",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.2.4",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
+    "less": "^4.1.1",
+    "less-loader": "^8.1.1",
+    "mini-css-extract-plugin": "^1.6.0",
+    "postcss-loader": "^5.2.0",
+    "postcss-preset-env": "^6.7.0",
+    "style-loader": "^2.0.0",
     "ts-loader": "^9.1.1",
     "typescript": "^4.2.4",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.36.2",
+    "webpack-bundle-analyzer": "^4.4.1",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "@types/node": "^15.0.1",
     "@types/react-dom": "^17.0.3",
+    "classnames": "^2.3.1",
     "mobx": "^6.3.0",
     "mobx-react": "^7.1.0",
+    "mobx-react-lite": "^2.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
