--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,12 @@
         "@babel/preset-env",
         "@babel/preset-react"
     ],
-    "plugins": []
+    "plugins": [
+        [
+            "@babel/plugin-proposal-decorators",
+            {
+              "legacy": true
+            }
+        ]
+    ]
 }
