添加antd组件库,处理样式文件

--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,15 @@
             {
               "legacy": true
             }
+        ],
+        [
+            "babel-plugin-import",
+            {
+              "libraryName": "antd",
+              "libraryDirectory": "es",
+              "style": true
+            },
+            "ant"
         ]
     ]
 }
