--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --config webpack/webpack.dev.config.js",
-    "start": "webpack-dev-server --config webpack/webpack.dev.config.js"
+    "start": "webpack-dev-server --config webpack/webpack.dev.config.js",
+    "build": "webpack --config webpack/webpack.prod.config.js"
   },
   "repository": {
     "type": "git",
@@ -27,12 +28,17 @@
     "babel-plugin-import": "^1.13.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
+    "mini-css-extract-plugin": "^2.6.0",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.4.3",
     "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.1",
+    "url-loader": "^4.1.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
