--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "happypack": "^5.0.1",
+    "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^5.5.0",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
